# wic-epson

./: Makefile  README.md  pyproject.toml
lib/: asciimatics.patch
reinkpy/: __init__.py  d4.py  epson.py  epson.toml  helpers.py  snmp.py  ui.py  usb.py  zeroconf.py
wordlists/: Makefile  to_keys_epson.py
